Pull request #1105: AG-10688 fix title hover
Merge in EXTENSIONS/browser-extension from fix/AG-10688 to master

Squashed commit of the following:

commit 213166c247a87c8c249bd9a3bcca3cdb0c70bb09
Merge: 2c052cb3c 4a76941b3
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Oct 18 16:47:20 2021 +0300

    Merge branch 'master' into fix/AG-10688

commit 2c052cb3ca39162f95ab2366a3c77d4b0f9c8a29
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Oct 18 12:24:29 2021 +0300

    fix/AG-10688 fix hover

--- a/Extension/src/pages/common/components/Editor/editor.pcss
+++ b/Extension/src/pages/common/components/Editor/editor.pcss
@@ -32,7 +32,7 @@
 
     @media (min-width: 1024px) {
         padding-left: 16px;
-        min-width: 624px;
+        min-width: 608px;
         max-width: 100vw;
         resize: both;
     }
